# agent-deepagent

./: AGENTS.md  CLAUDE.md  README.md  dev.md  pyproject.toml
agent/: context_manager.py  qa_handler.py  super_config.py  super_factory.py  super_react_agent.py  tool_call_handler.py
data/: test.jsonl
docs/: README.md  api-reference.md  concepts.md  configuration.md  development.md  examples.md  index.md  mcp-tools.md  quickstart.md  troubleshooting.md
llm/: __init__.py  openrouter_llm.py
test/: super_react_agent_test_run.py
tool/: logger.py  pyproject.toml  requirements.txt  requirements_mac.txt
tool/browser/: controller.py  tools.py
tool/browser/utils/: agent_types.py  logger.py  tool_validation.py
tool/browser/utils/utils/: agent_types.py
tool/mcp_servers/: __init__.py  auto_browser.py  browser_session.py  browser_use_mcp_server.py  python_server.py  reading_mcp_server.py  reasoning_mcp_server.py  searching_mcp_server.py  vision_mcp_server.py
tool/mcp_servers/activate/: start_mcp_server.sh  start_mcp_servers.ps1
tool/mcp_servers/utils/: search_content_judge.py  smart_request.py
