[project]
name = "test-agentcore-tooling"
version = "0.0.0"
description = "Local tooling environment (installed via pinned requirements with --no-deps)."
readme = "README.md"
requires-python = ">=3.12,<3.13"

# IMPORTANT:
# - This project intentionally installs with:
#     uv pip install --no-deps -r requirements.txt
# - Dependency resolution / locking may be unsatisfiable due to upstream constraints.
dependencies = [
  "aiofiles==24.1.0",
  "aiohappyeyeballs==2.6.1",
  "aiohttp==3.12.15",
  "aiosignal==1.4.0",
  "aiosqlite==0.21.0",
  "alphashape==1.3.1",
  "annotated-types==0.7.0",
  "anthropic==0.69.0",
  "antlr4-python3-runtime==4.9.3",
  "anyio==4.11.0",
  "asyncio==4.0.0",
  "attrs==25.3.0",
  "Authlib==1.6.4",
  "azure-ai-documentintelligence==1.0.2",
  "azure-core==1.35.1",
  "azure-identity==1.25.0",
  "backoff==2.2.1",
  "beautifulsoup4==4.14.2",
  "boto3==1.40.43",
  "botocore==1.40.43",
  "Brotli==1.1.0",
  "browser-use==0.1.48",
  "cachetools==6.2.0",
  "certifi==2025.8.3",
  "cffi==2.0.0",
  "chardet==5.2.0",
  "charset-normalizer==3.4.3",
  "click==8.3.0",
  "click-log==0.4.0",
  "cobble==0.1.4",
  "colorama==0.4.6",
  "coloredlogs==15.0.1",
  "Crawl4AI==0.7.4",
  "cryptography==46.0.2",
  "cyclopts==3.24.0",
  "datasets==2.21.0",
  "defusedxml==0.7.1",
  "dill==0.3.8",
  "distro==1.9.0",
  "dnspython==2.8.0",
  "dockerfile-parse==2.0.1",
  "docstring_parser==0.17.0",
  "docutils==0.22.2",
  "e2b==2.2.1",
  "e2b-code-interpreter==2.0.0",
  "email-validator==2.3.0",
  "et_xmlfile==2.0.0",
  "exceptiongroup==1.3.0",
  "faiss-cpu==1.12.0",
  "fake-http-header==0.3.5",
  "fake-useragent==2.2.0",
  "fastmcp==2.12.4",
  "fastuuid==0.13.5",
  "filelock==3.19.1",
  "filetype==1.2.0",
  "fire==0.7.1",
  "firecrawl==4.3.6",
  "flatbuffers==25.9.23",
  "frozenlist==1.7.0",
  "fsspec==2024.6.1",
  "google-ai-generativelanguage==0.6.15",
  "google-api-core==2.25.1",
  "google-api-python-client==2.184.0",
  "google-auth==2.41.1",
  "google-auth-httplib2==0.2.0",
  "google-genai==1.40.0",
  "google-generativeai==0.8.5",
  "googleapis-common-protos==1.70.0",
  "greenlet==3.2.4",
  "grpcio==1.75.1",
  "grpcio-status==1.71.2",
  "h11==0.16.0",
  "h2==4.3.0",
  "hpack==4.1.0",
  "httpcore==1.0.9",
  "httplib2==0.31.0",
  "httpx==0.28.1",
  "httpx-sse==0.4.1",
  "huggingface-hub==0.35.3",
  "humanfriendly==10.0",
  "humanize==4.13.0",
  "hydra-core==1.3.2",
  "hyperframe==6.1.0",
  "idna==3.10",
  "importlib_metadata==8.7.0",
  "isodate==0.7.2",
  "Jinja2==3.1.6",
  "jiter==0.11.0",
  "jmespath==1.0.1",
  "joblib==1.5.2",
  "json5==0.12.1",
  "jsonpatch==1.33",
  "jsonpointer==3.0.0",
  "jsonschema==4.25.1",
  "jsonschema-path==0.3.4",
  "jsonschema-specifications==2025.9.1",
  "langchain==0.3.22",
  "langchain-anthropic==0.3.3",
  "langchain-aws==0.2.19",
  "langchain-core==0.3.49",
  "langchain-deepseek==0.1.3",
  "langchain-google-genai==2.1.2",
  "langchain-ollama==0.3.0",
  "langchain-openai==0.3.11",
  "langchain-text-splitters==0.3.7",
  "langsmith==0.3.45",
  "lark==1.3.0",
  "lazy-object-proxy==1.12.0",
  "litellm==1.77.5",
  "lxml==5.4.0",
  "magika==0.6.2",
  "mammoth==1.10.0",
  "markdown-it-py==4.0.0",
  "markdownify==1.1.0",
  "markitdown==0.1.3",
  "markitdown-mcp==0.0.1a3",
  "MarkupSafe==3.0.3",
  "mcp==1.15.0",
  "mdurl==0.1.2",
  "mem0ai==0.1.93",
  "monotonic==1.6",
  "more-itertools==10.8.0",
  "mpmath==1.3.0",
  "msal==1.34.0",
  "msal-extensions==1.3.1",
  "multidict==6.6.4",
  "multiprocess==0.70.16",
  "mutagen==1.47.0",
  "nest-asyncio==1.6.0",
  "networkx==3.5",
  "nltk==3.9.2",
  "numpy==2.3.3",
  "olefile==0.47",
  "ollama==0.6.0",
  "omegaconf==2.3.0",
  "onnxruntime==1.20.1",
  "openai==1.109.1",
  "openapi-core==0.19.5",
  "openapi-pydantic==0.5.1",
  "openapi-schema-validator==0.6.3",
  "openapi-spec-validator==0.7.2",
  "openpyxl==3.1.5",
  "orjson==3.11.3",
  "packaging==24.2",
  "pandas==2.3.3",
  "parse==1.20.2",
  "patchright==1.55.2",
  "pathable==0.4.4",
  "pdfminer.six==20250506",
  "pillow==11.3.0",
  "playwright==1.55.0",
  "portalocker==3.2.0",
  "posthog==3.25.0",
  "propcache==0.3.2",
  "proto-plus==1.26.1",
  "protobuf==5.29.5",
  "psutil==7.1.0",
  "psycopg2-binary==2.9.10",
  "pyarrow==21.0.0",
  "pyasn1==0.6.1",
  "pyasn1_modules==0.4.2",
  "pycparser==2.23",
  "pydantic==2.10.6",
  "pydantic-settings==2.11.0",
  "pydantic_core==2.27.2",
  "pydub==0.25.1",
  "pyee==13.0.0",
  "Pygments==2.19.2",
  "PyJWT==2.10.1",
  "pyOpenSSL==25.3.0",
  "pyparsing==3.2.5",
  "pyperclip==1.11.0",
  "pyreadline3==3.5.4",
  "python-dateutil==2.9.0.post0",
  "python-dotenv==1.1.1",
  "python-multipart==0.0.20",
  "python-pptx==1.0.2",
  "pytz==2024.2",
  "pywin32==311",
  "PyYAML==6.0.3",
  "qdrant-client==1.15.1",
  "rank-bm25==0.2.2",
  "referencing==0.36.2",
  "regex==2025.9.18",
  "requests==2.32.5",
  "requests-toolbelt==1.0.0",
  "rfc3339-validator==0.1.4",
  "rich==14.1.0",
  "rich-rst==1.3.1",
  "rpds-py==0.27.1",
  "rsa==4.9.1",
  "rtree==1.4.1",
  "s3transfer==0.14.0",
  "safetensors==0.6.2",
  "scikit-learn==1.7.2",
  "scipy==1.16.2",
  "screeninfo==0.8.1",
  "sentence-transformers==5.1.1",
  "setuptools==80.9.0",
  "shapely==2.1.2",
  "six==1.17.0",
  "sniffio==1.3.1",
  "snowballstemmer==2.2.0",
  "soupsieve==2.8",
  "SpeechRecognition==3.14.3",
  "SQLAlchemy==2.0.43",
  "sse-starlette==3.0.2",
  "standard-aifc==3.13.0",
  "standard-chunk==3.13.0",
  "starlette==0.48.0",
  "sympy==1.14.0",
  "tenacity==8.5.0",
  "termcolor==3.1.0",
  "tf-playwright-stealth==1.2.0",
  "threadpoolctl==3.6.0",
  "tiktoken==0.11.0",
  "tokenizers==0.22.1",
  "torch==2.8.0",
  "tqdm==4.67.1",
  "transformers==4.56.2",
  "trimesh==4.8.3",
  "typing-inspection==0.4.2",
  "typing_extensions==4.15.0",
  "tzdata==2025.2",
  "uritemplate==4.2.0",
  "urllib3==2.5.0",
  "uvicorn==0.37.0",
  "websockets==15.0.1",
  "Werkzeug==3.1.1",
  "wikipedia==1.4.0",
  "xlrd==2.0.2",
  "xlsxwriter==3.2.9",
  "xxhash==3.5.0",
  "yarl==1.20.1",
  "youtube-transcript-api==1.0.3",
  "zipp==3.23.0",
  "zstandard==0.23.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
